# Varp-Server-Django

./: db.sqlite3  manage.py  pyproject.toml
VarpServer/: asgi.py  settings.py  urls.py  wsgi.py
Wagtail/: apps.py  models.py
Wagtail/migrations/: 0001_initial.py  0002_remove_articlepage_body_articlepage_content.py  0003_alter_articlepage_content.py
Wagtail/static/styles/: image_with_text_block.css
Wagtail/templates/: article_page.html  embeded.html  heading.html  image_with_text_block.html  index.html  paragraph.html
