[project]
name = "varpserver"
version = "0.0.1"
description = "This is the complete solution for varp server"
authors = [
    {name = "NexFire",email = "max.tyxl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
